test_suite/alan-2022-examples/failing/001710_mutation.alan
source Q begin call V76(then) end
